Closed Bug 1105189 Opened 9 years ago Closed 9 years ago

Look for the distribution/bundles directory under Contents/Resources due to v2 signing requirements

Categories

(Firefox :: General, defect)

34 Branch
x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Firefox 36
Tracking Status
firefox34 --- wontfix
firefox35 --- fixed
firefox36 --- fixed

People

(Reporter: hectorz, Assigned: hectorz)

References

Details

Attachments

(1 file)

+++ This bug was initially created as a clone of Bug #1047738 +++

In bug 1047738, the logic in nsXREDirProvider::LoadAppBundleDirs is not updated.
Attached patch bug1105189.patchSplinter Review
Assignee: nobody → bzhao
Attachment #8528910 - Flags: review?(benjamin)
Attachment #8528910 - Flags: review?(benjamin) → review+
If this is something that's going to be needed for Firefox 34, it may require a rebuild. cc'ing lawrence.
Flags: needinfo?(lmandel)
I don't think we should block on this, and realistically we're planning on removing distribution/bundles support entirely in the near future.
(In reply to Benjamin Smedberg  [:bsmedberg] from comment #4)
> I don't think we should block on this, and realistically we're planning on
> removing distribution/bundles support entirely in the near future.

Hi Benjamin,

The Firefox China repack distributed by Beijing office currently has two extensions in distribution/bundles, one is addon installer which was also used in byob to workaround bug 641746; the other one provides a 360 secure browser bookmark migrator on WINNT, and we want it to be available on profile creation. Any advice on how to accomplish these once distribution/bundles support is removed? Thanks.
https://hg.mozilla.org/mozilla-central/rev/21496e80b1fb
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Whiteboard: [fixed-in-fx-team]
Target Milestone: --- → Firefox 36
I'm going on bsmedberg's advice in comment 4. We're not going to block on this for 34.
Flags: needinfo?(lmandel)
Comment on attachment 8528910 [details] [diff] [review]
bug1105189.patch

Approval Request Comment
[Feature/regressing bug #]: 1047738
[User impact if declined]: extensions in distribution/bundles will not be loaded on OS X
[Describe test coverage new/current, TBPL]: none
[Risks and why]: Low, similar changes for distribution/searchplugins landed in bug 1047738
[String/UUID change made/needed]: none
Attachment #8528910 - Flags: approval-mozilla-beta?
Comment on attachment 8528910 [details] [diff] [review]
bug1105189.patch

[Triage Comment]
We need this on both Aurora and Beta.
Attachment #8528910 - Flags: approval-mozilla-beta?
Attachment #8528910 - Flags: approval-mozilla-beta+
Attachment #8528910 - Flags: approval-mozilla-aurora+
Comment on attachment 8528910 [details] [diff] [review]
bug1105189.patch

I was wrong, just on Beta.
Attachment #8528910 - Flags: approval-mozilla-aurora+
Keywords: checkin-needed
You need to log in before you can comment on or make changes to this bug.