Bug 1105189 - Look for the distribution/bundles directory under Contents/Resources due to v2 signing requirements. r=bsmedberg, a=lsblakk